<resources>
    <string name="notifications">پیام ها</string>
    <string name="best_of_address">بهترین های آدرس</string>
    <string name="search_title">جستجو</string>
    <string name="search_hint">جستجوی رستوران ، شهر ، باشگاه ورزشی یا . . .</string>
    <string name="categories">دسته بندی ها</string>
    <string name="destination_is_here">مقصد همینجاست </string>
    <string name="ters_services">شرایط استفاده از خدمات آدرس</string>
    <string name="path_finder">مسیریابی</string>
    <string name="rate_item">امتیاز دهی</string>
    <string name="send_image">ارسال تصویر</string>
    <string name="description">توضیحات</string>
    <string name="location">موقعیت مکانی</string>
    <string name="phone_number">شماره تماس</string>
    <string name="email">پست الکترونیک</string>
    <string name="website">وب سایت</string>
    <string name="similar_items">موارد مشابه</string>
    <string name="be_first_to_comment">اولین نفری باشید که نظر ارسال می کنید</string>
    <string name="see_all_comments">مشاهده همه نظرات</string>
    <string name="comment">نظر</string>
    <string name="loading">در حال بارگذاری</string>
    <string name="profile">پروفایل</string>
    <string name="write_your_comment">نظر خود را بنویسید</string>
    <string name="submit_comment">ارسال نظر</string>
    <string name="see_more_items">مشاهده موارد بیشتر</string>
    <string name="facilities">امکانات</string>
    <string name="call">تماس</string>
    <string name="signout">خروج از حساب</string>
    <string name="edit_account">ویرایش حساب</string>
    <string name="user_name">نام کاربر</string>
    <string name="trip">سفر</string>
    <string name="item">آیتم</string>
    <string name="photo">عکس</string>
    <string name="follow">دنبال کردن</string>
    <string name="followers">دنبال کننده ها</string>
    <string name="followings">دنبال شونده ها</string>
    <string name="myitems">آیتم های من</string>
    <string name="myphotos">عکس های من</string>
    <string name="mytrips">سفرهای من</string>
    <string name="mycomments">نظرهای من</string>
    <string name="items">آیتم ها</string>
    <string name="photos">عکس ها</string>
    <string name="trips">سفرها</string>
    <string name="comments">نظر ها</string>
    <string name="near_items_on_map">نزدیک ترین ها روی نقشه</string>
    <string name="create_account">ساخت حساب کاربری</string>
    <string name="name">نام</string>
    <string name="familyname">نام خانوادگی</string>
    <string name="fullname">نام و نام خانوادگی</string>
    <string name="Email">پست الکترونیک</string>
    <string name="mobile">موبایل</string>
    <string name="password">کلمه عبور</string>
    <string name="repassword">تکرار کلمه عبور</string>
    <string name="already_have_account">قبلا ثبت نام کرده اید ؟</string>
    <string name="signup">ثبت نام</string>
    <string name="signin">ورود به حساب کاربری</string>
    <string name="no_account_yet">هنوز ثبت نام کرده اید ؟</string>
    <string name="login">ورود</string>
    <string name="send_comment">ارسال نظر</string>
    <string name="terms">شرایط استفاده از سرویس</string>
    <string name="user_search">جستجوی کاربر</string>
    <string name="about">درباره ما</string>
    <string name="contact">ارتباط با ما</string>
    <string name="search_user">جستجوی کاربر</string>
    <string name="submit_item">ثبت مکان جدید</string>
    <string name="submit_trip">ثبت سفر</string>
    <string name="app_name">Address</string>
    <string name="lottery_welcome">به سیستم قرعه کشی آدرس خوش آمدید.</string>
    <string name="festival_welcomw">به فستیوال عکس آدرس خوش آمدید.</string>
    <string name="delete_comment">حذف نظر</string>
    <string name="delete_comment_text">آیا از حذف این نظر اطمینان دارید ؟</string>
    <string name="delete_comment_yes">بلی حذف شود</string>
    <string name="delete_comment_no">خیر منصرف شدم</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="add_item_title">افزودن آیتم جدید</string>
    <string name="address">آدرس</string>
    <string name="select">انتخاب</string>
    <string name="cancel">انصراف</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="support">پشتیبانی</string>
    <string name="connection_pending">منتظر تایید</string>
    <string name="connection_accepted">پروفایل</string>
    <string name="connection_rejected">ریجکتد</string>
    <string name="trip_title">عنوان سفر</string>
    <string name="trip_select_date">تاریخ سفر</string>
    <string name="trip_select_location">موقعیت مکانی سفر</string>
    <string name="trip_location_selected">موقعیت جغرافیایی سفر انتخاب شد</string>
    <string name="trip_description">تجربیات سفر شما</string>
    <string name="trip_title_required">عنوان سفر خود را وارد کنید .</string>
    <string name="trip_date_required">تاریخ سفر خود را وارد کنید .</string>
    <string name="trip_location_required">منطقه جغرافیایی سفر خود را مشخص کنید .</string>
    <string name="trip_descripton_required">تجربیات سفر خود را بنویسید .</string>
    <string name="_continue_submit_trip">ثبت سفر و ارسال تصویر</string>
    <string name="edit_trip">ویرایش سفر</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>
    <string name="view">مشاهده</string>
    <string name="unauthorized">دسترسی غیر مجاز</string>
    <string name="unauthorized_text">برای تکمیل فرآیند باید وارد شوید , در صورتیکه حساب کاربری ندارید ثبت نام کنید</string>
    <string name="no_connection">عدم اتصال به اینترنت</string>
    <string name="no_connection_text">متاسفانه اتصال شما به شبکه اینترنت برقرار نیست. برای استفاده از اپلیکیشن آدرس، به اینترنت نیازمندیم. به یکی از روش های زیر، به اینترنت متصل شوید :</string>
    <string name="simcard_network">اینترنت سیم کارت</string>
    <string name="wifi_network">اینترنت Wi-Fi</string>
    <string name="follow_request">درخواست دوستی جدید</string>
    <string name="follow_request_text">شهرام فرسیابی درخواست دارد تا شما را دنبال کند. می توانید اکنون این درخواست را قبول یا رد کنید و یا بعدا در این مورد تصمیم بگیرید.</string>
    <string name="accept_request">قبول درخواست</string>
    <string name="reject_request">رد درخواست</string>
    <string name="later">بعدا</string>
    <string name="trip_photos">عکس های سفر</string>
    <string name="approve">موافقم</string>
    <string name="rejected">قطع ارتباط با کاربر انجام شد</string>
    <string name="connected">ارتباط با کاربر با موفقیت انجام شد</string>
</resources>