<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ir.iraddress.www.extend.TextInputEditTextIranSans
        android:hint="Title"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ir.iraddress.www.extend.TextInputEditTextIranSans
        android:hint="Description"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ir.iraddress.www.extend.TextInputEditTextIranSans
        android:hint="Address"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ir.iraddress.www.extend.TextInputEditTextIranSans
        android:hint="@string/Email"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ir.iraddress.www.extend.TextInputEditTextIranSans
        android:hint="Phone"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ir.iraddress.www.extend.TextInputEditTextIranSans
        android:hint="WebSite"
        android:layout_width="match_parent"
        android:layout_height="56dp" />


    <ir.iraddress.www.extend.TextViewIranSans
        android:onClick="showMapDialog"
        android:drawableRight="@drawable/about"
        android:text="Google Map"
        android:gravity="center|right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ir.iraddress.www.extend.TextViewIranSans
        android:onClick="showExpandableCategoriesList"
        android:drawableRight="@drawable/about"
        android:text="@string/categories"
        android:gravity="center|right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ir.iraddress.www.extend.TextViewIranSans
        android:onClick="showFacilitiesList"
        android:drawableRight="@drawable/about"
        android:text="@string/facilities"
        android:gravity="center|right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ir.iraddress.www.extend.AppButton
        android:text="Submit Request"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

</LinearLayout>