<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorWhite">
                <ir.iraddress.www.extend.TextViewIranSans
                    android:text="@string/unauthorized"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:background="@color/colorWhite">
                <ir.iraddress.www.extend.TextViewIranSans
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/unauthorized_text"
                    android:textAlignment="center"
                    android:textColor="@color/mediumGray"
                    android:textSize="12sp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:baselineAligned="false"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/toolbar_address_gradiant">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ir.iraddress.www.extend.AppButton
                        android:id="@+id/yes"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/colorLightGray" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ir.iraddress.www.extend.AppButton
                        android:id="@+id/no"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:text="@string/signup"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>